2004-04-27  Derek Price  <derek@ximbiot.com>

	* dos.m4: Update from GNULIB.

2004-04-27  Derek Price  <derek@ximbiot.com>

	Add dirname module from GNULIB.

	* Makefile.am (EXTRA_DIST): Add new files.
	* dirname.m4, dos.m4: New files.
	* Makefile.in: Regenerated.

2004-04-21  Derek Price  <derek@ximbiot.com>

	Add stdbool module from GNULIB.

	* Makefile.am (EXTRA_DIST): Add stdbool.m4.
	* stdbool.m4: New files.
	* Makefile.in: Regenerated.

2004-04-14  Derek Price  <derek@ximbiot.com>

	Update to current fnmatch module from GNULIB.

	* Makefile.am (EXTRA_DIST): Add fnmatch.m4 * mbstate_t.m4.
	* fnmatch.m4, mbstate_t.m4: New files.
	* Makefile.in: Regenerated.

2004-04-07  Derek Price  <derek@ximbiot.com>

	Update regex module from GNULIB.

	* Makefile.am (EXTRA_DIST): Add regex.m4.
	* regex.m4: New file.

2004-02-20  Derek Price  <derek@ximbiot.com>

	Import xalloc module from GNULIB, as well as its remaining unimported
	dependency, the exitfail module.

	* Makefile.am (EXTRA_DIST): Add exitfail.m4 & xalloc.m4.
	* exitfail.m4, xalloc.m4: New files.
	* Makefile.in: Regenerated.

2004-02-18  Derek Price  <derek@ximbiot.com>

	* xsize.m4: Update to a more recent version which AC_REQUIREs
	AC_C_INLINE.

2004-02-15  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add alloca.m4.

2004-02-15  Derek Price  <derek@ximbiot.com>

	Import vasnprintf module from GNULIB.
	* intmax_t.m4, longdouble.m4, longlong.m4, signed.m4, vasnprintf.m4,
	wchar_t.m4, wint_t.m4: New files.
	* Makefile.am (EXTRA_DIST): Add new files.

2004-02-15  Derek Price  <derek@ximbiot.com>

	Import xsize module from GNULIB for vasnprintf().
	* size_max.m4, xsize.m4: New files.
	* Makefile.am (EXTRA_DIST): Add new files.

2004-02-15  Derek Price  <derek@ximbiot.com>

	Import alloca module from GNULIB for vasnprintf().
	* alloca.m4: New file.

2003-11-25  Mark D. Baushke  <mdb@cvshome.org>

	* Makefile.in: Regenerate for new configure.in.

2003-11-19  Derek Price  <derek@ximbiot.com>
